@startuml
package br.univille.projfabsoftcashflow.entity {
    class Cliente {
        - long id
        - String nome
        - String endereco
        - String telefone
        - String email
        + long getId()
        + void setId(long id)
        + String getNome()
        + void setNome(String nome)
        + String getEndereco()
        + void setEndereco(String endereco)
        + String getTelefone()
        + void setTelefone(String telefone)
        + String getEmail()
        + void setEmail(String email)
    }

    class Categoria {
        - long id
        - String nome
        - Relatorio relatorio
        - Transacao transacao
        + long getId()
        + void setId(long id)
        + String getNome()
        + void setNome(String nome)
        + Relatorio getRelatorio()
        + void setRelatorio(Relatorio relatorio)
        + Transacao getTransacao()
        + void setTransacao(Transacao transacao)
    }

    class Transacao {
        - long id
        - float valor
        - Date data
        - String descricao
        - Cliente cliente
        - Categoria categoria
        + long getId()
        + void setId(long id)
        + float getValor()
        + void setValor(float valor)
        + Date getData()
        + void setData(Date data)
        + String getDescricao()
        + void setDescricao(String descricao)
        + Cliente getCliente()
        + void setCliente(Cliente cliente)
        + Categoria getCategoria()
        + void setCategoria(Categoria categoria)
    }

    class Relatorio {
        - long id
        - float saldoTotal
        - Map<String, Float> saldoPorCategoria
        - Simulacao simulacao
        + long getId()
        + void setId(long id)
        + float getSaldoTotal()
        + void setSaldoTotal(float saldoTotal)
        + Map<String, Float> getSaldoPorCategoria()
        + void setSaldoPorCategoria(Map<String, Float> saldoPorCategoria)
        + Simulacao getSimulacao()
        + void setSimulacao(Simulacao simulacao)
    }

    class Simulacao {
        - long id
        - float impactoGastoExtra
        - Date mesReferencia
        + long getId()
        + void setId(long id)
        + float getImpactoGastoExtra()
        + void setImpactoGastoExtra(float impactoGastoExtra)
        + Date getMesReferencia()
        + void setMesReferencia(Date mesReferencia)
    }
}

Cliente "1" --> "*" Transacao : "realiza"
Transacao "1" --> "1" Categoria : "pertence a"
Relatorio "1" --> "*" Categoria : "detalha"
Simulacao "1" --> "1" Relatorio : "baseada em"
@enduml